--- a/react-client/src/index.css
+++ b/react-client/src/index.css
@@ -1,12 +1,8 @@
-/* a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
   margin: 0;
-} */
+}
+
+a {
+  color: inherit;
+  text-decoration: inherit;
+}
